<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E9A6"
    tools:context=".BMICalculator"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/l1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/alert"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,MissingConstreaints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_shape"
            android:gravity="center"
            android:text="@string/default_show_bmi"
            app:layout_constraintBottom_toTopOf="@+id/container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitle"
            tools:ignore="MissingConstraints" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F0F0F0"
    android:orientation="horizontal">
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="Age"/>
    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Age"/>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F0F0"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender       "
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
          <RadioGroup
              android:id="@+id/yourRadioGroup"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

                  <RadioButton
                      android:id="@+id/male"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Male"
                      android:textColor="@color/colorPrimary"
                      android:textSize="20dp"/>
                  <RadioButton
                      android:id="@+id/female"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Female"
                      android:textColor="@color/colorPrimary"
                      android:textSize="20dp"/>



          </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/contain"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:background="#F0F0F0"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="193dp">

        <TextView

            android:id="@+id/showBMI"
            style="@style/TextTheme"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:contentDescription="@string/content_show_bmi"
            android:hint="Metric BMI" />

        <TextView
            android:id="@+id/showImpBMI"
            style="@style/TextTheme"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:contentDescription="@string/content_show_result"
            android:hint="Imperial BMI"
            android:text="@string/default_show_result" />

        <TextView
            android:id="@+id/showResult"
            style="@style/TextTheme"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:contentDescription="@string/content_show_result"
            android:hint="Category"
            android:text="@string/default_show_result" />
    </LinearLayout>


    <LinearLayout
android:layout_marginBottom="10dp"
        android:background="#F0F0F0"
        android:id="@+id/contain"
        android:layout_width="382dp"
        android:layout_height="79dp"
        android:layout_below="@id/l1"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputKg"
                style="@style/TextTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/content_user_answer"
                android:ems="4"
                android:inputType="numberDecimal"
                android:labelFor="@id/inputKg" />

            <EditText

                android:id="@+id/inputM"
                style="@style/TextTheme"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/content_user_answer"
                android:ems="4"
                android:inputType="numberDecimal"
                android:labelFor="@id/inputM" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_label_kg"
                android:textStyle="bold" />

            <TextView
                style="@style/TextTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_label_m"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/container"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contain"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <Button

            android:id="@+id/buttonCalculate"
            style="@style/ButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/roundbuttonshap"
            android:contentDescription="@string/content_button_exit"
            android:text="@string/text_button_calculate" />

        <Button
            android:id="@+id/buttonExit"
            style="@style/ButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundbuttonshap"
            android:contentDescription="@string/content_button_calculate"
            android:gravity="center"
            android:text="@string/Reset" />


    </LinearLayout>


</RelativeLayout>